--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="kezdo.css">
     <title>Murai Tamás</title>
 </head>
 <body>
@@ -12,10 +13,18 @@
             <h1>Hozávalók-Elkészítési idő</h1>
         </header>
         <nav>
-            <ul>
-                <li><a href="#">Kezdőlap</a></li>
-                <li><a href="#">Recept</a></li>
-            </ul>
+            <div class="flex-container">
+                <div>
+                    <ul>
+                        <li><a href="index.html">Kezdőlap</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li><a href="pori.html">Recept</a></li>
+                    </ul>
+                </div>
+            </div>
         </nav>
         <article>
             <fieldset>
@@ -25,6 +34,116 @@
                     <input type="text" name="nev" id="nev" placeholder="Recept név ">
                 </div>
             </fieldset>
+            <fieldset>
+                <legend>Nehézségi fok</legend>
+                <div class="nehezseg">
+                    <label for="">Könnyű</label>
+                    <input type="radio" name="nehezseg" id="konnyu">
+
+                    <label for="kozepes">Közepes</label>
+                    <input type="radio" name="nehezseg" id="kozepes">
+
+                    <label for="nehez">Nehéz</label>
+                    <input type="radio" name="nehezseg" id="nehez">
+                </div>
+
+                    <button type="submit">Elfogad   </button> 
+            </fieldset>
+            <fieldset>
+                <legend>Összetevők</legend>
+                <div>
+                    <label for="">Hozzávalók:</label>
+                    <div>
+                        <input type="text" name="hozza" id="hozza" placeholder="">
+                    </div>
+                    <div>
+                        <input type="text" name="hozza" id="hozza" placeholder="">
+                    </div>
+                    <div>
+                        <input type="text" name="hozza" id="hozza" placeholder="">
+                    </div>
+                    <div>
+                        <input type="text" name="hozza" id="hozza" placeholder="">
+                    </div>
+                    <div>
+                        <input type="text" name="hozza" id="hozza" placeholder="">
+                    </div>
+                    <div>
+                        <input type="text" name="hozza" id="hozza" placeholder="">
+                    </div>
+                    <div>
+                        <input type="text" name="hozza" id="hozza" placeholder="">
+                    </div>
+                    <div>
+                        <input type="text" name="hozza" id="hozza" placeholder="">
+                    </div>
+                    <div>
+                        <input type="text" name="hozza" id="hozza" placeholder="">
+                    </div>
+                    <div>
+                        <input type="text" name="hozza" id="hozza" placeholder="">
+                    </div>
+                    <div>
+                        <input type="text" name="hozza" id="hozza" placeholder="">
+                    </div>
+                    <div>
+                        <input type="text" name="hozza" id="hozza" placeholder="">
+                    </div>
+                    <div>
+                        <input type="text" name="hozza" id="hozza" placeholder="">
+                    </div>
+                    <button type="submit">Elfogad   </button>  
+                </div>
+            </fieldset>
+            <fieldset>
+                <legend>Allergének</legend>
+                <div>
+                    <p>Kiválaszthatók: </p>
+                    <div>
+                        <input type="checkbox" name="szemszin" id="leves">
+                        <label for="gluten">Glutén</label>
+                        <input type="checkbox" name="szemszin" id="rantotthus">
+                        <label for="mogyorofelek">Mogyorófélék</label>
+                        <input type="checkbox" name="szemszin" id="palacsinta">
+                        <label for="fa">Fántermő hélyasok</label>
+                        <input type="checkbox" name="szemszin" id="lazannya">
+                        <label for="zeller">Zeller</label>
+                        <input type="checkbox" name="szemszin" id="lazannya">
+                        <label for="mustar">Mustár</label>
+                        <input type="checkbox" name="szemszin" id="lazannya">
+                        <label for="tojas">Tojás</label>
+                        <input type="checkbox" name="szemszin" id="lazannya">
+                        <label for="tej">Tej</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" name="szemszin" id="lazannya">
+                        <label for="magok">Magok</label>
+                        <input type="checkbox" name="szemszin" id="lazannya">
+                        <label for="hal">Hal</label>
+                        <input type="checkbox" name="szemszin" id="lazannya">
+                        <label for="rak">Rákfélék</label>
+                        <input type="checkbox" name="szemszin" id="lazannya">
+                        <label for="puhatestu">Puhatestűek</label>
+                        <input type="checkbox" name="szemszin" id="lazannya">
+                        <label for="szoja">Szója</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" name="szemszin" id="lazannya">
+                        <label for="savak">Kén-dioxid és az SO2-ben kifejezett szulfitok</label>
+                        <input type="checkbox" name="szemszin" id="lazannya">
+                        <label for="lupin">Csillagfürt és a belőle készült termékek</label>
+                    </div>
+                    <button type="submit">Elfogad   </button>  
+                </div>
+            </fieldset>
+            <fieldset>
+                <legend>Idő</legend>
+                <div>
+                    <label for="">Elkészítési idő:</label>
+                    <input type="text" name="nev" id="nev" placeholder="perc">
+                </div>
+            </fieldset>
+
         </article>
         <footer>
             
