--- a/pori.html
+++ b/pori.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,28 +11,72 @@
     <main>
         <header>
             <h1>Bikásparki falatozó</h1>
-            <h2>Vörösboros Marhapörkölt</h2>
-            <img src="marhapöri.jpg" alt="pöri">
         </header>
         <nav>
+            <div class="flex-container">
+                <div>  
+                    <ul>
+                        <li><a href="#">Kezdőlap</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li><a href="#">Recept</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li><a href="#">Kapcsolat</a></li>
+                    </ul>
+                </div>
+            </div>
         </nav>
+        <section>
+            <h2>Vörösboros Marhapörkölt</h2>
+            <img src="marhapöri.jpg" alt="pöri">
+        </section>
         <article>
-            <h1>Elkészítés</h1>
-            <ol>
-                <li>A marhahúst megtisztítjuk, szárazra töröljük, és közepes kockákra vágjuk.</li>
-                <li>A hagymát megpucoljuk, felaprítjuk, és 5 evőkanál olajon aranysárgára pirítjuk. Ekkor felöntjük
-                    kevés vízzel, és újból zsírjára sütjük. Közben megsózzuk.</li>
-                <li>A húst a hagymára dobjuk, és erős tűzön fehéredésig sütjük. Mikor kicsit levet engedett, mehet bele
-                    a pirospaprika, a kömény és két gerezd zúzott fokhagyma.</li>
-                <li>A zöldpaprikát kimagozzuk, apró kockákra vágjuk, és a pörköltbe tesszük. Kevés vizet öntünk hozzá,
-                    és megsózzuk. Hagyjuk főni, közben megsózzuk, megborsozzuk. Félidőben megfűszerezzük a kakukkfűvel
-                    és majorannával, de épp csak egy csipetnyit adunk hozzá.</li>
-                <li>Mikor kb. 1 óra múlva a hús félpuha, hozzáadjuk a felkockázott, meghámozott paradicsomot és a
-                    vörösbort is, és barnásra főzzük. A legvégén még egyszer beízesítjük zúzott fokhagymával és
-                    köménnyel. Amikor zamatos, fűszeres, barnás és sűrű, az étel elkészült.</li>
-                <li>A vörösboros marhapörköltet főtt krumplival vagy nokedlivel kínáljuk.</li>
-            </ol>
+            <div class="flex-container">
+                <div>
+                    <h1>Hozzávalók:</h1>
+                </div>
+                <div>
+                    <ul>
+                        <li>1kg marhahús</li>
+                        <li>30dkg vöröshagyma</li>
+                        <li>5ek olaj</li>
+                        <li>só</li>
+                        <li>1ek pirospaprika</li>
+                        <li>1tk kömény</li>
+                        <li>3 gerezd fokhagyma</li>
+                        <li>1db zöldpaprika </li>
+                        <li>bors </li>
+                        <li>1 csipet kakukkfű</li>
+                        <li>1 csipet majoranna</li>
+                        <li>1db paradicsom</li>
+                        <li>2dl vörösbor</li>
+                    </ul>
+                </div>
+            </div>
         </article>
+                
+                <aside>
+                <h1>Elkészítés</h1>
+                <ol>
+                    <li>A marhahúst megtisztítjuk, szárazra töröljük, és közepes kockákra vágjuk.</li>
+                    <li>A hagymát megpucoljuk, felaprítjuk, és 5 evőkanál olajon aranysárgára pirítjuk. Ekkor felöntjük
+                        kevés vízzel, és újból zsírjára sütjük. Közben megsózzuk.</li>
+                    <li>A húst a hagymára dobjuk, és erős tűzön fehéredésig sütjük. Mikor kicsit levet engedett, mehet bele
+                        a pirospaprika, a kömény és két gerezd zúzott fokhagyma.</li>
+                    <li>A zöldpaprikát kimagozzuk, apró kockákra vágjuk, és a pörköltbe tesszük. Kevés vizet öntünk hozzá,
+                        és megsózzuk. Hagyjuk főni, közben megsózzuk, megborsozzuk. Félidőben megfűszerezzük a kakukkfűvel
+                        és majorannával, de épp csak egy csipetnyit adunk hozzá.</li>
+                    <li>Mikor kb. 1 óra múlva a hús félpuha, hozzáadjuk a felkockázott, meghámozott paradicsomot és a
+                        vörösbort is, és barnásra főzzük. A legvégén még egyszer beízesítjük zúzott fokhagymával és
+                        köménnyel. Amikor zamatos, fűszeres, barnás és sűrű, az étel elkészült.</li>
+                    <li>A vörösboros marhapörköltet főtt krumplival vagy nokedlivel kínáljuk.</li>
+                </ol>
+                </aside>
         <footer>
 
         </footer>
