--- a/pori.html
+++ b/pori.html
@@ -16,12 +16,12 @@
             <div class="flex-container">
                 <div>  
                     <ul>
-                        <li><a href="#">Kezdőlap</a></li>
+                        <li><a href="index.html">Kezdőlap</a></li>
                     </ul>
                 </div>
                 <div>
                     <ul>
-                        <li><a href="#">Recept</a></li>
+                        <li><a href="pori.html">Recept</a></li>
                     </ul>
                 </div>
                 <div>
