--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <header>
-            <h1>Hozávalók-Elkészítési idő</h1>
+            <h1>Hozzávalók-Elkészítési idő</h1>
         </header>
         <nav>
             <div class="flex-container">
